Some model documentation and e3 RCP application

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -132,3 +132,6 @@ _UI_Generator_type = Generator
 _UI_Exporter_type = Exporter
 _UI_Installer_type = Installer
 _UI_ModelLoader_type = Model Loader
+_UI_Worker_type = Worker
+_UI_Workspace_customizers_feature = Customizers
+_UI_Customizer_rank_feature = Rank
