--- a/bundles/org.enterprisedomain.workplace/.project
+++ b/bundles/org.enterprisedomain.workplace/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.enterprisedomain.ui.workplace.rcp</name>
+	<name>org.enterprisedomain.workplace</name>
 	<comment></comment>
 	<projects>
 	</projects>
