--- a/bundles/org.enterprisedomain.workplace/build.properties
+++ b/bundles/org.enterprisedomain.workplace/build.properties
@@ -4,5 +4,4 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               css/default.css,\
-               Application.e4xmi
+               splash.bmp
