--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain.root</artifactId>
-		<version>0.7.9-SNAPSHOT</version>
+		<version>0.7.902-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -32,6 +32,6 @@
 	</build>
 
 	<modules>
-		<module>org.enterprisedomain.tests</module>
+		<module>org.enterprisedomain.classmaker.tests</module>
 	</modules>
 </project>
