e3 GenericEditor is working
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -135,3 +135,4 @@ _UI_ModelLoader_type = Model Loader
 _UI_Worker_type = Worker
 _UI_Workspace_customizers_feature = Customizers
 _UI_Customizer_rank_feature = Rank
+_UI_State_packageClassName_feature = Package Class Name
