--- a/bundles/org.enterprisedomain.classmaker/plugin.xml
+++ b/bundles/org.enterprisedomain.classmaker/plugin.xml
@@ -47,7 +47,7 @@
          point="org.eclipse.core.runtime.adapters">
       <factory
             adaptableType="org.enterprisedomain.classmaker.Contribution"
-            class="org.enterprisedomain.classmaker.impl.ContributionImpl">
+            class="org.enterprisedomain.classmaker.core.ContributionAdapterFactory">
          <adapter
                type="org.eclipse.emf.ecore.resource.Resource">
          </adapter>
