Generalize Project#getChildren's element type
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.workplace/plugin.xml
+++ b/bundles/org.enterprisedomain.workplace/plugin.xml
@@ -22,6 +22,10 @@
                modelElement="org.eclipse.emf.ecore.EObject"
                priority="4">
          </staticTester>
+         <staticTester
+               modelElement="org.eclipse.emf.ecore.resource.Resource"
+               priority="4">
+         </staticTester>
       </modelElementOpener>
    </extension>
    <extension
