--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -10,18 +10,21 @@
 		<tycho.extras.version>${tycho.version}</tycho.extras.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<neon-repo.url>http://download.eclipse.org/releases/neon</neon-repo.url>
+		<org.osgi.framework.system.capabilities>
+			osgi.ee;osgi.ee="JavaSE";version:List="1.0,1.1,1.2,1.3,1.4,1.5,1.6,1.7,1.8"
+		</org.osgi.framework.system.capabilities>
 	</properties>
 	<repositories>
 		<repository>
 			<id>eclipse-p2-repo</id>
 			<url>${neon-repo.url}</url>
-			<layout>p2</layout>			
+			<layout>p2</layout>
 		</repository>
 		<repository>
 			<id>edapt-p2-repo</id>
 			<url>http://download.eclipse.org/edapt/releases/12x</url>
-			<layout>p2</layout>			
-		</repository>		
+			<layout>p2</layout>
+		</repository>
 	</repositories>
 	<build>
 		<plugins>
