--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -147,3 +147,6 @@ _UI_ClassMakerService_workspace_feature = Workspace
 _UI_ClassMakerService_SCMRegistry_feature = SCM Registry
 _UI_Blueprint_completionListeners_feature = Completion Listeners
 _UI_ResourceAdapter_project_feature = Project
+_UI_ResourceChangeListener_type = Resource Change Listener
+_UI_IResource_type = IResource
+_UI_Project_resourcePath_feature = Resource Path
