Customizers rank is [1..10] instead of [0..9]
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -150,3 +150,6 @@ _UI_ResourceAdapter_project_feature = Project
 _UI_ResourceChangeListener_type = Resource Change Listener
 _UI_IResource_type = IResource
 _UI_Project_resourcePath_feature = Resource Path
+_UI_Notification_type = Notification
+_UI_Project_resourceReloadListener_feature = Resource Reload Listener
+_UI_Project_savingResource_feature = Saving Resource
