Make after resource save and reload Model Explorer view
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -153,3 +153,8 @@ _UI_Project_resourcePath_feature = Resource Path
 _UI_Notification_type = Notification
 _UI_Project_resourceReloadListener_feature = Resource Reload Listener
 _UI_Project_savingResource_feature = Saving Resource
+_UI_Project_revision_feature = Revision
+_UI_Project_revisions_feature = Revisions
+_UI_Project_projectVersion_feature = Project Version
+_UI_SelectRevealHandler_type = Select Reveal Handler
+_UI_Project_selectRevealHandler_feature = Select Reveal Handler
