Turn off auto-building, ResourceChangeAdapter filtering, import fix
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.workbench/plugin.xml
+++ b/bundles/org.enterprisedomain.workbench/plugin.xml
@@ -49,5 +49,14 @@
          </view>
       </perspectiveExtension>
    </extension>
+   <extension
+         point="org.eclipse.ui.editors">
+      <editor
+            class="org.enterprisedomain.workplace.ModelEditor"
+            default="false"
+            id="org.enterprisedomain.workbench.modelEditor"
+            name="Model Editor">
+      </editor>
+   </extension>
 
 </plugin>
