--- a/bundles/org.enterprisedomain.ecp/plugin.xml
+++ b/bundles/org.enterprisedomain.ecp/plugin.xml
@@ -28,6 +28,9 @@
          <adapter
                type="org.eclipse.emf.ecore.resource.ResourceSet">
          </adapter>
+         <adapter
+               type="org.eclipse.emf.ecp.core.ECPProvider">
+         </adapter>
       </factory>
    </extension>
    <extension
