Correct bintray deploy
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/releng/release.json
+++ b/releng/release.json
@@ -23,7 +23,7 @@
 
     "files":
         [
-        {"includePattern": "build/releng/org.enterprisedomain.update/target/site/*", "excludePattern": ".gitignore", "uploadPattern": "gems/$2"},
+        {"includePattern": "build/releng/org.enterprisedomain.update/target/site/(.*/)*", "excludePattern": ".gitignore", "uploadPattern": "gems/$2"},
         {"includePattern": "build/docs/(.*)", "uploadPattern": "docs/$1"}
         ],
     "publish": true
