--- a/releng/release.json
+++ b/releng/release.json
@@ -10,7 +10,7 @@
         "licenses": ["Apache-2.0"],
         "labels": ["oxygen3"],
         "public_download_numbers": false,
-        "public_stats": false,
+        "public_stats": false
     },
 
     "version": {
@@ -24,7 +24,6 @@
     "files":
         [
         {"includePattern": "build/releng/org.enterprisedomain.update/target/site/(.*)", "excludePattern": ".gitignore", "uploadPattern": "$1"},
-{"includePattern": "build/docs/(.*)", "uploadPattern": "docs/$2"}
         {"includePattern": "build/releng/org.enterprisedomain.update/target/site/plugins/(.*)", "excludePattern": ".gitignore", "uploadPattern": "plugins/$1"},
         {"includePattern": "build/releng/org.enterprisedomain.update/target/site/features/(.*)", "excludePattern": ".gitignore", "uploadPattern": "features/$1"},
 {"includePattern": "build/docs/(.*)", "uploadPattern": "docs/$2"}
