Fix uninstalling from update site
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -158,3 +158,6 @@ _UI_Project_revisions_feature = Revisions
 _UI_Project_projectVersion_feature = Project Version
 _UI_SelectRevealHandler_type = Select Reveal Handler
 _UI_Project_selectRevealHandler_feature = Select Reveal Handler
+_UI_Workspace_service_feature = Service
+_UI_Workspace_SCMRegistry_feature = SCM Registry
+_UI_SCMOperator_registry_feature = Registry
