--- a/bundles/org.enterprisedomain.workbench/pom.xml
+++ b/bundles/org.enterprisedomain.workbench/pom.xml
@@ -1,12 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<packaging>pom</packaging>
+	<artifactId>org.enterprisedomain.workbench</artifactId>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain.bundles</artifactId>
 		<version>0.7.929-SNAPSHOT</version>
 	</parent>
-
-	<artifactId>org.enterprisedomain.classmaker.osgi.systemextension</artifactId>
-	<packaging>eclipse-plugin</packaging>
 </project>
