--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.xml
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.xml
@@ -32,4 +32,15 @@
                org.eclipse.emf.edit.provider.IItemPropertySource"/>
    </extension>
 
+
+<extension
+      point="org.eclipse.emf.ecp.view.model.provider.xmi.file">
+   <file
+         filePath="src/org/enterprisedomain/classmaker/edit/dialogs/EOperation.view">
+      <filter
+            key="detail"
+            value="true">
+      </filter>
+   </file>
+</extension>
 </plugin>
