--- a/bundles/org.enterprisedomain.classmaker.edit/build.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/build.properties
@@ -16,6 +16,7 @@ bin.includes = .,\
                icons/,\
                META-INF/,\
                plugin.xml,\
+src/org/enterprisedomain/classmaker/edit/dialogs/,\
                plugin.properties
 jars.compile.order = .
 source.. = src/
