--- a/bundles/org.enterprisedomain.ecp.filter/pom.xml
+++ b/bundles/org.enterprisedomain.ecp.filter/pom.xml
@@ -3,10 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.features</artifactId>
+		<artifactId>org.enterprisedomain.bundles</artifactId>
 		<version>0.7.992-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>org.enterprisedomain.classmaker.osgi.resolverhooks.feature</artifactId>
-	<packaging>eclipse-feature</packaging>
+	<artifactId>org.enterprisedomain.ecp.filter</artifactId>
+	
+	<packaging>eclipse-plugin</packaging>
+	<version>0.7.992-SNAPSHOT</version>
+	<groupId>org.enterprisedomain</groupId>
 </project>
