--- a/bundles/org.enterprisedomain.workbench/build.properties
+++ b/bundles/org.enterprisedomain.workbench/build.properties
@@ -3,6 +3,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               splash.bmp,\
-               Application.e4xmi
+               splash.bmp
 source.. = src/
