--- a/features/org.enterprisedomain.classmaker.ecp.feature/pom.xml
+++ b/features/org.enterprisedomain.classmaker.ecp.feature/pom.xml
@@ -3,13 +3,13 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<packaging>eclipse-plugin</packaging>
-	<artifactId>org.enterprisedomain.workbench</artifactId>
-	<version>0.7.992-SNAPSHOT</version>
+	<packaging>eclipse-feature</packaging>
 	<groupId>org.enterprisedomain</groupId>
+	<artifactId>org.enterprisedomain.classmaker.ecp.feature</artifactId>
+	<version>0.7.992-SNAPSHOT</version>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.bundles</artifactId>
 		<version>0.7.992-SNAPSHOT</version>
+		<artifactId>org.enterprisedomain.features</artifactId>
 	</parent>
 </project>
