--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain.releng</artifactId>
-		<version>0.7.929-SNAPSHOT</version>
+		<version>0.7.992-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.enterprisedomain.target</artifactId>
 	<packaging>eclipse-target-definition</packaging>
@@ -30,9 +31,15 @@
 								<versionRange>0.0.0</versionRange>
 							</requirement>
 							<requirement>
+								<type>eclipse-feature</type>
+								<groupId>org.enterprisedomain</groupId>
+								<artifactId>org.enterprisedomain.ui.workbench.rcp.feature</artifactId>
+								<version>0.7.992-SNAPSHOT</version>
+							</requirement>
+							<requirement>
 								<type>eclipse-plugin</type>
 								<artifactId>org.enterprisedomain.classmaker.osgi.systemextension</artifactId>
-								<version>0.7.929-SNAPSHOT</version>
+								<version>0.7.992-SNAPSHOT</version>
 							</requirement>
 						</extraRequirements>
 					</dependency-resolution>
