edit feature, Oomph setup
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -14,6 +14,7 @@
 	<modules>
 		<module>org.enterprisedomain.classmaker.feature</module>
 		<module>org.enterprisedomain.classmaker.osgi.resolverhooks.feature</module>
+		<module>org.enterprisedomain.classmaker.edit.feature</module>
 		<module>org.enterprisedomain.classmaker.ecp.feature</module>
 		<module>org.enterprisedomain.ui.workbench.rcp.feature</module>
 	</modules>
