--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -6,11 +6,11 @@
 	<version>0.7.992-SNAPSHOT</version>
 	<properties>
 		<product.version>0.7.992-SNAPSHOT</product.version>
-		<tycho.version>1.0.0</tycho.version>
+		<tycho.version>1.2.0</tycho.version>
 		<tycho.extras.version>${tycho.version}</tycho.extras.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.osgi.framework.system.capabilities>
-			osgi.ee;osgi.ee="JavaSE";version:List="1.0,1.1,1.2,1.3,1.4,1.5,1.6,1.7,1.8"
+			osgi.ee;osgi.ee="JavaSE";version:List="1.0,1.1,1.2,1.3,1.4,1.5,1.6,1.7,1.8,1.9,1.10"
 		</org.osgi.framework.system.capabilities>
 	</properties>
 	<repositories>
@@ -77,6 +77,27 @@
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-toolchains-plugin</artifactId>
+				<version>1.1</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>toolchain</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<toolchains>
+						<jdk>
+							<version>1.10</version>
+							<vendor>openjdk</vendor>
+						</jdk>
+					</toolchains>
 				</configuration>
 			</plugin>
 		</plugins>
