--- a/releng/org.enterprisedomain.update/pom.xml
+++ b/releng/org.enterprisedomain.update/pom.xml
@@ -14,7 +14,7 @@
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-p2-publisher-plugin</artifactId>
-					<version>1.0.0</version>
+					<version>${tycho.version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -22,9 +22,17 @@
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-publisher-plugin</artifactId>
-				<version>1.0.0</version>
+				<version>${tycho.version}</version>
 				<configuration>
 					<publish-categories>true</publish-categories>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-repository-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<createArtifactRepository>true</createArtifactRepository>
 				</configuration>
 			</plugin>
 		</plugins>
