--- a/features/pom.xml
+++ b/features/pom.xml
@@ -17,5 +17,6 @@
 		<module>org.enterprisedomain.classmaker.edit.feature</module>
 		<module>org.enterprisedomain.classmaker.ecp.feature</module>
 		<module>org.enterprisedomain.ui.workbench.rcp.feature</module>
+		<module>org.enterprisedomain.ui.workbench.ide.feature</module>		
 	</modules>
 </project>
