--- a/features/org.enterprisedomain.ui.workbench.ide.feature/pom.xml
+++ b/features/org.enterprisedomain.ui.workbench.ide.feature/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>eclipse-feature</packaging>
 	<groupId>org.enterprisedomain</groupId>
-	<artifactId>org.enterprisedomain.ui.workbench.rcp.feature</artifactId>
+	<artifactId>org.enterprisedomain.ui.workbench.ide.feature</artifactId>
 	<version>0.8.0-SNAPSHOT</version>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
