3x Application UI default enablement and EMFStore provider
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.workbench.ide/plugin.xml
+++ b/bundles/org.enterprisedomain.workbench.ide/plugin.xml
@@ -17,5 +17,16 @@
             name="ECP">
       </category>
    </extension>
+   <extension
+         point="org.eclipse.core.contenttype.contentTypes">
+      <file-association
+            content-type="org.eclipse.emf.ecore.xmi"
+            file-extensions="xmi">
+      </file-association>
+      <file-association
+            content-type="org.eclipse.emf.ecore"
+            file-extensions="ecore,xmi">
+      </file-association>
+   </extension>
 
 </plugin>
