--- a/bundles/org.enterprisedomain.workbench/build.properties
+++ b/bundles/org.enterprisedomain.workbench/build.properties
@@ -3,5 +3,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               splash.bmp
+               splash.bmp,\
+               Application.e4xmi
 source.. = src/
