Enable e3 by default in IDE plug-in
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.workbench.ide/plugin.xml
+++ b/bundles/org.enterprisedomain.workbench.ide/plugin.xml
@@ -28,5 +28,11 @@
             file-extensions="ecore,xmi">
       </file-association>
    </extension>
+   <extension
+         point="org.eclipse.ui.activities">
+      <defaultEnablement
+            id="org.eclipse.emf.ecp.application.e3.enablement">
+      </defaultEnablement>
+   </extension>
 
 </plugin>
