--- a/bundles/org.enterprisedomain.workbench.ide/plugin.xml
+++ b/bundles/org.enterprisedomain.workbench.ide/plugin.xml
@@ -34,5 +34,26 @@
             id="org.eclipse.emf.ecp.application.e3.enablement">
       </defaultEnablement>
    </extension>
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="*">
+         <perspectiveShortcut
+               id="org.eclipse.emf.ecp.application3x.perspective">
+         </perspectiveShortcut>
+      </perspectiveExtension>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.products">
+      <product
+            application="org.eclipse.ui.ide.workbench"
+            description="enterpriseDomain Workbench Application"
+            name="enterpriseDomain Workbench">
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
+         </property>
+      </product>
+   </extension>
 
 </plugin>
