--- a/bundles/org.enterprisedomain.workbench.ide/plugin.xml
+++ b/bundles/org.enterprisedomain.workbench.ide/plugin.xml
@@ -110,6 +110,68 @@
             name="ECP">
       </perspective>
    </extension>
+   <extension
+         point="org.eclipse.core.runtime.adapters">
+      <factory
+            adaptableType="org.eclipse.core.resources.IProject"
+            class="org.enterprisedomain.workbench.ide.ProjectAdapterFactory">
+         <adapter
+               type="org.enterprisedomain.classmaker.Contribution">
+         </adapter>
+      </factory>
+      <factory
+            adaptableType="org.eclipse.emf.ecp.core.ECPProject"
+            class="org.enterprisedomain.workbench.ide.ProjectAdapterFactory">
+         <adapter
+               type="org.enterprisedomain.classmaker.Contribution">
+         </adapter>
+      </factory>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            id="org.enterprisedomain.workbench.ide.command.make"
+            name="Make">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="org.enterprisedomain.workbench.ide.handler.MakeHandler"
+            commandId="org.enterprisedomain.workbench.ide.command.make">
+         <activeWhen>
+            <with
+                  variable="selection">
+               <and>
+                  <count
+                        value="1">
+                  </count>
+                  <iterate
+                        ifEmpty="false"
+                        operator="and">
+                     <adapt
+                           type="org.enterprisedomain.classmaker.Contribution">
+                     </adapt>
+                  </iterate>
+               </and>
+            </with>
+         </activeWhen>
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.ui.popup.any?after=additions">
+         <command
+               commandId="org.enterprisedomain.workbench.ide.command.make"
+               style="push">
+            <visibleWhen
+                  checkEnabled="true">
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
    
 
 </plugin>
