--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -164,3 +164,7 @@ _UI_SCMOperator_registry_feature = Registry
 _UI_LongToStateMapEntry_type = Long To State Map Entry
 _UI_LongToStateMapEntry_key_feature = Key
 _UI_LongToStateMapEntry_value_feature = Value
+_UI_Item_project_feature = Project
+_UI_Project_version_feature = Version
+_UI_Revision_version_feature = Version
+_UI_Project_state_feature = State
