Update release credentials and paths

--- a/releng/release.json
+++ b/releng/release.json
@@ -16,17 +16,17 @@
     "version": {
         "name": "0.8.0",
         "desc": "This is a release version",      
-        "released": "2019-07-22",
+        "released": "2019-09-10",
         "vcs_tag": "0.8.0",
         "gpgSign": false
     },
 
     "files":
         [
-        {"includePattern": "build/enterpriseDomain/ClassMaker/releng/org.enterprisedomain.update/target/repository/(.*)", "excludePattern": ".gitignore", "uploadPattern": "$1"},
-        {"includePattern": "build/enterpriseDomain/ClassMaker/releng/org.enterprisedomain.update/target/repository/plugins/(.*)", "excludePattern": ".gitignore", "uploadPattern": "plugins/$1"},
-        {"includePattern": "build/enterpriseDomain/ClassMaker/releng/org.enterprisedomain.update/target/repository/features/(.*)", "excludePattern": ".gitignore", "uploadPattern": "features/$1"},
-        {"includePattern": "build/enterpriseDomain/ClassMaker/docs/(.*)", "uploadPattern": "docs/$1"}
+        {"includePattern": "releng/org.enterprisedomain.update/target/repository/(.*)", "excludePattern": ".gitignore", "uploadPattern": "$1"},
+        {"includePattern": "releng/org.enterprisedomain.update/target/repository/plugins/(.*)", "excludePattern": ".gitignore", "uploadPattern": "plugins/$1"},
+        {"includePattern": "releng/org.enterprisedomain.update/target/repository/features/(.*)", "excludePattern": ".gitignore", "uploadPattern": "features/$1"},
+        {"includePattern": "docs/(.*)", "uploadPattern": "docs/$1"}
         ],
     "publish": true
 }
