--- a/releng/release.json
+++ b/releng/release.json
@@ -2,7 +2,7 @@
     "package": {
         "name": "ClassMaker",
         "repo": "ClassMaker",
-        "subject": "enterpriseDomain",
+        "subject": "kyrillzotkin",
         "desc": "I was pushed completely automatically",
         "website_url": "enterprisedomain.org",
         "issue_tracker_url": "https://github.com/enterpriseDomain/ClassMaker/issues",
