Update JGit versions, update Oomph JRE compatibility
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/releng/release.json
+++ b/releng/release.json
@@ -23,6 +23,10 @@
 
     "files":
         [
+        {"includePattern": "org.enterprisedomain.workbench.ide.product/target/repository/(.*)", "excludePattern": ".gitignore", "uploadPattern": "$1", "matrixParams": {
+        "override": 1 }
+        },        
+        [
         {"includePattern": "releng/org.enterprisedomain.update/target/repository/(.*)", "excludePattern": ".gitignore", "uploadPattern": "$1", "matrixParams": {
         "override": 1 }
         },
