--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ deploy:
   - releng/org.enterprisedomain.workbench.ide.product/target/products/workbench-macosx.cocoa.x86_64.zip
   - releng/org.enterprisedomain.workbench.ide.product/target/products/workbench-win32.win32.x86_64.zip
   on:
-    repo: enterpriseDomain/ClassMaker        
+    repo: enterpriseDomain/ClassMaker
+    tags: true        
   skip_cleanup: true
 
