Add editor test
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -168,3 +168,11 @@ _UI_Item_project_feature = Project
 _UI_Project_version_feature = Version
 _UI_Revision_version_feature = Version
 _UI_Project_state_feature = State
+_UI_Blueprint_edit_feature = Edit
+_UI_Blueprint_editor_feature = Editor
+_UI_State_edit_feature = Edit
+_UI_State_editor_feature = Editor
+_UI_State_editDeployableUnitName_feature = Edit Deployable Unit Name
+_UI_State_editorDeployableUnitName_feature = Editor Deployable Unit Name
+_UI_State_editPluginClassName_feature = Edit Plugin Class Name
+_UI_State_editorPluginClassName_feature = Editor Plugin Class Name
