If job hasErrors setNextJob State.getReturnWorker
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -176,3 +176,7 @@ _UI_State_editDeployableUnitName_feature = Edit Deployable Unit Name
 _UI_State_editorDeployableUnitName_feature = Editor Deployable Unit Name
 _UI_State_editPluginClassName_feature = Edit Plugin Class Name
 _UI_State_editorPluginClassName_feature = Editor Plugin Class Name
+_UI_State_generator_feature = Generator
+_UI_State_exporter_feature = Exporter
+_UI_State_installer_feature = Installer
+_UI_State_loader_feature = Loader
