--- a/bundles/org.enterprisedomain.workbench.ide/plugin.xml
+++ b/bundles/org.enterprisedomain.workbench.ide/plugin.xml
@@ -135,33 +135,43 @@
             commandId="org.enterprisedomain.workbench.ide.command.make">
          <activeWhen>
             <with
-                  variable="selection">
-               <and>
-                  <count
-                        value="1">
-                  </count>
+                     variable="activeMenuSelection">
                   <iterate
-                        ifEmpty="false"
-                        operator="and">
+                        ifEmpty="false">
                      <adapt
-                           type="org.enterprisedomain.classmaker.Contribution">
+                           type="org.eclipse.core.resources.IProject">
+                        <test
+                              property="org.eclipse.core.resources.projectNature"
+                              value="org.enterprisedomain.classmaker.projectNature">
+                        </test>
                      </adapt>
                   </iterate>
-               </and>
-            </with>
+               </with>
          </activeWhen>
       </handler>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
-            allPopups="false"
+            allPopups="true"
             locationURI="popup:org.eclipse.ui.popup.any?after=additions">
          <command
                commandId="org.enterprisedomain.workbench.ide.command.make"
                style="push">
-            <visibleWhen
-                  checkEnabled="true">
+           <visibleWhen>
+               <with
+                     variable="activeMenuSelection">
+                  <iterate
+                        ifEmpty="false">
+                     <adapt
+                           type="org.eclipse.core.resources.IProject">
+                        <test
+                              property="org.eclipse.core.resources.projectNature"
+                              value="org.enterprisedomain.classmaker.projectNature">
+                        </test>
+                     </adapt>
+                  </iterate>
+               </with>
             </visibleWhen>
          </command>
       </menuContribution>
